# c-2020

ADC_DAC_JBP/: ADC_DAC_JBP Debug.launch
ADC_DAC_JBP/Debug/: ADC_DAC_JBP.elf  ADC_DAC_JBP.list  ADC_DAC_JBP.map  makefile
Arduino/Banda/: Banda.ino
Arduino/Encoder/: Encoder.ino
Arduino/interrut/: interrut.ino
Arduino/test/: test.ino
Arduino/test2/: test2.ino
Arduino/ultrasonico/: ultrasonico.ino
Arduino/velocidad/: velocidad.ino
Arduino_Nodes_Self_Driver/node_ultrasonic/: node_ultrasonic.ino
Arduino_Nodes_Self_Driver/nodo_control/: nodo_control.ino
Codigo_Serial_Cam/: Codigo_Serial_Cam.ino
IR/: .project  IR.elf.launch
IR/Debug/: IR.elf  IR.map  makefile
LED/: .mxproject  LED.ioc
Lanes/: distance_master  hugh.cpp  lane_dbs.cpp  lane_dbscanII.cpp  lane_detection.cpp  lanes_histo.cpp  line.cpp  master.cpp
Self_Balancing/: .cproject  .mxproject  Self_Balancing.elf.launch
balancing/: .cproject  balancing.ioc
belt/: .cproject  .mxproject
c++_basic/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  eight  eight.cpp  first  five  five.cpp  four  four.cpp  nine  nine.cpp  seven  seven.cpp  six  six.cpp  three  three.cpp  two  two.cpp
carAutomation/: .cproject  carAutomation.elf.launch  carAutomation.ioc
lane_follower/: code.c  code2.c
several/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dbscan  dbscan.cpp  input1_cluster_0.txt  input1_cluster_1.txt  map  map.cpp
stl/: CMakeCache.txt  CMakeLists.txt  Eigen  Eigen.cpp  Makefile  cmake_install.cmake  template  template.cpp  vector  vector.cpp
(+417 files in other folders)
